--- a/graphic.html
+++ b/graphic.html
@@ -171,7 +171,7 @@
         <h2 class="cat-title">Social Media Poster Design</h2>
         <div class="masonry-grid">
             <!-- Box 1 (Long) -->
-            <div class="grid-item"><img class="p-img-v" alt="Poster 1"></div>
+            <div class="grid-item"><img class="https://i.postimg.cc/Ssc9SwD1/imgi-76-605757829-122177609462592345-7981842141774160848-n.jpg" alt="Poster 1"></div>
             <!-- Box 2 (Square) -->
             <div class="grid-item"><img class="p-img-s" alt="Poster 2"></div>
             <!-- Box 3 (Wide) -->
