--- a/graphic.html
+++ b/graphic.html
@@ -150,7 +150,7 @@
                 <div class="orbit-item oi-3"><i class="fas fa-crop-alt"></i></div>
                 <div class="orbit-item oi-4"><i class="fas fa-layer-group"></i></div>
             </div>
-            <img class="hero-my-img" alt="Abdur Rahman">
+            <img class="https://i.postimg.cc/Ssc9SwD1/imgi-76-605757829-122177609462592345-7981842141774160848-n.jpg" alt="Abdur Rahman">
         </div>
     </section>
 
