--- a/graphic.html
+++ b/graphic.html
@@ -173,7 +173,7 @@
             <!-- Box 1 (Long) -->
             <div class="grid-item"><img class="https://i.postimg.cc/Ssc9SwD1/imgi-76-605757829-122177609462592345-7981842141774160848-n.jpg" alt="Poster 1"></div>
             <!-- Box 2 (Square) -->
-            <div class="grid-item"><img class="p-img-s" alt="Poster 2"></div>
+            <div class="grid-item"><img class="https://i.postimg.cc/Ssc9SwD1/imgi-76-605757829-122177609462592345-7981842141774160848-n.jpg" alt="Poster 2"></div>
             <!-- Box 3 (Wide) -->
             <div class="grid-item"><img class="p-img-h" alt="Poster 3"></div>
             <!-- Box 4 (Long) -->
