--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@ footer { background-color: var(--dark-gray); padding: 50px 5%; display: flex; fl
 <div class="logo">Abdur Rahman.</div>
 <div class="hamburger" onclick="toggleMenu()"><i class="fas fa-bars"></i></div>
 <ul class="nav-links">
-<li><a href="index.html">Home</a></li>
+<li><a href="./index.html">Home</a></li>
 <li class="dropdown">
 <a href="#">Portfolio <i class="fas fa-caret-down"></i></a>
 <div class="dropdown-content">
