--- a/resume.html
+++ b/resume.html
@@ -108,7 +108,7 @@
         <div class="logo">Abdur Rahman.</div>
         <div class="hamburger" onclick="toggleMenu()"><i class="fas fa-bars"></i></div>
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li class="dropdown">
                 <a href="#">Portfolio <i class="fas fa-caret-down"></i></a>
                 <div class="dropdown-content">
